# supyworkflow

./: .gitignore  README.md  pyproject.toml
examples/: 01_email_digest.py  02_calendar_briefing.py  03_research_report.py  04_competitor_monitor.py  05_slack_standup.py  run_agentic.py  run_examples.py  run_generated.py  run_live.py  run_providers.py  run_stress.py  run_stress_agentic.py
plans/: 00_summary.md  01_cardamon_integration.md  02_script_versioning.md  03_parallel_cells.md  04_tool_discovery.md  05_observability.md  06_testing.md  07_agentic_generator.md
supyworkflow/: __init__.py  _trace_ctx.py  agent_generator.py  cli.py  generator.py  healer.py  llm_builtin.py  namespace.py  parser.py  runtime.py  snapshot.py  tool_provider.py  tool_proxy.py  trace.py  validator.py
supyworkflow/providers/: __init__.py  composite.py  http_gateway.py  supyagent.py
tests/: e2e_test.py  test_generator.py  test_healer.py  test_parser.py  test_providers.py  test_runtime.py
