[project]
name = "supyworkflow"
version = "0.1.4"
description = "Workflow-as-code runtime — execute LLM-generated Python workflows with implicit observability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ergodic AI", email = "hello@ergodic.ai" }
]
keywords = [
    "ai",
    "agents",
    "workflow",
    "automation",
    "llm",
    "tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ergodic-ai/supyworkflow"
Repository = "https://github.com/ergodic-ai/supyworkflow"

[project.scripts]
supyworkflow = "supyworkflow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supyworkflow"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".env.*",
    "tests/",
    ".pytest_cache/",
    ".coverage",
    ".git/",
    ".venv/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
